--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -33,3 +33,29 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+.container {
+  /* Phone styles & > */
+  min-width: 320px;
+  max-width: 375px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  outline: 2px solid red;
+  outline-offset: -2px;
+}
+
+@media only screen and (min-width: 768px) {
+  .container {
+    max-width: 744px;
+  }
+}
+
+
+@media only screen and (min-width: 1280px) {
+  .container {
+    max-width: 1255px;
+  }
+}
