--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,8 +5,16 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
 @import url('./header.css');
+@import url('./hero.css');
+@import url('./work-it.css');
+@import url('./fruits.css');
+@import url('./contacts.css');
+@import url('./footer.css');
+@import url('./your-order.css');
+@import url('./thank-you.css');
+@import url('./mobile-menu.css');
+
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -23,3 +31,20 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+.section {
+  padding-bottom: 80px;
+}
+
+@media only screen and (min-width: 768px) {
+  .section {
+    padding-bottom: 144px;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .section {
+    padding-bottom: 150px;
+  }
+}
+
