--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,11 +1,69 @@
 .footer-container {
     padding-top: 80px;
+    color: #AE1332;
+    font-family: 'DM Sans';
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.29;
+}
+
+.footer-img {
+    margin-bottom: 20px;
+}
+
+.link.logo {
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+    margin-bottom: 24px;
+}
+
+.footer-logo-text {
+    font-style: normal;
+    font-weight: 700;
+    letter-spacing: -0.04em;
+    text-transform: uppercase;
 }
 
 .footer-icon-logo {
     fill: #AE1332;
 }
 
+.footer-list {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 44px;
+}
+
+
+
 .footer-icon {
     fill: #AE1332;
+}
+
+.footer-list-icons {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 44px;
+}
+
+.footer-socmedia-link {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+    border: solid 1px #AE1332;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.footer-address-link {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 14px;
+    align-items: center;
 }
