--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,32 +1,40 @@
 <footer class="container footer-container section">
-  <img class="footer-img" alt="girl with bananas" width="335" height="172" />
-  <a href="" class="link logo">
-    <svg class="footer-icon-logo" width="16" height="16">
-      <use href="./img/icons/icons.svg#icon-logo"></use>
-    </svg>
-    fresh harvest box
-  </a>
-  <ul>
-    <li>How It Works</li>
-    <li>Fruits</li>
-    <li>Contacts</li>
+  <div class="footer-logo-content">
+    <img
+      src="./img/image-footer.jpg"
+      class="footer-img"
+      alt="girl with bananas"
+      width="335"
+      height="172"
+    />
+    <a href="" class="link logo">
+      <svg class="footer-icon-logo" width="16" height="16">
+        <use href="./img/icons/icons.svg#icon-logo"></use>
+      </svg>
+      <span class="footer-logo-text">fresh harvest box</span>
+    </a>
+  </div>
+  <ul class="list footer-list">
+    <li class="footer-list-item">How It Works</li>
+    <li class="footer-list-item">Fruits</li>
+    <li class="footer-list-item">Contacts</li>
   </ul>
-  <ul>
-    <li>
+  <ul class="list footer-list-icons">
+    <li class="footer-icons-item">
       <a href="" class="footer-socmedia-link">
         <svg class="footer-icon" width="24" height="24">
           <use href="./img/icons/icons.svg#icon-facebook"></use>
         </svg>
       </a>
     </li>
-    <li>
+    <li class="footer-icons-item">
       <a href="" class="footer-socmedia-link">
         <svg class="footer-icon" width="24" height="24">
           <use href="./img/icons/icons.svg#icon-instagram"></use>
         </svg>
       </a>
     </li>
-    <li>
+    <li class="footer-icons-item">
       <a href="" class="footer-socmedia-link">
         <svg class="footer-icon" width="24" height="24">
           <use href="./img/icons/icons.svg#icon-youtube"></use>
@@ -35,7 +43,7 @@
     </li>
   </ul>
   <address class="footer-address">
-    <ul>
+    <ul class="footer-address-link">
       <li>
         <a href="tel:+380684439426">+380 (68) 443-94-26</a>
       </li>
