--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -4,7 +4,7 @@
       <h1 class="hero-text">
         fresh harvest box is your 0ne-stop place for a delicious fruit basket
       </h1>
-      <button class="hero-btn" type="button">shopnow</button>
+      <button class="hero-btn" type="button">shop<br />now</button>
     </div>
     <div class="hero-cards">
       <p class="card-text">
@@ -14,7 +14,7 @@
       </p>
       <div class="top-card">
         <h3 class="top-card-text">Fruit</h3>
-        <img class="hero-img" />
+        <img class="hero-img" href="../img/" />
         <p class="low-card-text">
           Refreshing and juicy, watermelon is the perfect summer treat and a
           great source of hydration
@@ -28,7 +28,7 @@
           <li class="hero-teg">#fruits</li>
         </ul>
 
-        <div class="low-card">
+        <div class="top-card low-card">
           <h3 class="top-card-text">Fruit</h3>
           <img class="hero-img" />
           <p class="low-card-text">
