--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,4 +1,28 @@
-/* Reset styles */
+.link {
+  text-decoration: none;
+  font-style: normal;
+}
+
+.list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 h1,
 h2,
 h3,
@@ -9,68 +33,8 @@ p {
   margin: 0;
 }
 
-p:last-child {
-  margin-bottom: 0;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-a {
-  color: currentColor;
-  text-decoration: none;
-}
-
-button {
-  cursor: pointer;
-}
-
 img {
   display: block;
   max-width: 100%;
   height: auto;
-}
-
-.section {
-  padding-bottom: 80px;
-}
-
-@media only screen and (min-width: 768px) {
-  .section {
-    padding-bottom: 144px;
-  }
-}
-
-@media only screen and (min-width: 1280px) {
-  .section {
-    padding-bottom: 150px;
-  }
-}
-
-.container {
-  min-width: 320px;
-  max-width: 375px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 20px;
-  padding-right: 20px;
-
-  outline: 2px solid red;
-  outline-offset: -2px;
-}
-
-@media only screen and (min-width: 768px) {
-  .container {
-    max-width: 744px;
-  }
-}
-
-
-@media only screen and (min-width: 1280px) {
-  .container {
-    max-width: 1255px;
-  }
 }
