--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,6 +5,7 @@
   |============================
 */
 @import url('./reset.css');
+@import url('./common.css');
 @import url('./header.css');
 @import url('./hero.css');
 @import url('./work-it.css');
@@ -15,22 +16,38 @@
 @import url('./thank-you.css');
 @import url('./mobile-menu.css');
 
-
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+  /**
+      |============================
+      | FONTS
+      |============================
+    */
+  --main-font: 'DM Sans', sans-serif;
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+  /**
+    |============================
+    | COLORS
+    |============================
+  */
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  --brand-cl: #ae1332;
+
+  /* Text */
+  --body-light-txt-cl: #ffffff;
+
+  /* Bg */
+  --light-bg-cl: #ffffff;
+  --btn-bg-cl: #9dc262;
+
+  /* Icon */
+  --active-fill: #9dc262;
+
+  /**
+    |============================
+    | OTHERS
+    |============================
+  */
+
+  --item: 1;
+  --len: 14px;
 }
-
-
-
