--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,10 +1,43 @@
 .footer-container {
+    display: flex;
+    flex-direction: column;
+    gap: 44px;
     padding-top: 80px;
+    padding-bottom: 80px;
     color: #AE1332;
     font-family: 'DM Sans';
     font-weight: 400;
     font-size: 14px;
     line-height: 1.29;
+}
+
+@media only screen and (min-width: 768px) {
+    .footer-container {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
+
+.footer-nav-block {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+
+
+@media only screen and (min-width: 768px) {
+    .footer-nav-block {
+        gap: 80px;
+    }
+}
+
+@media only screen and (min-width: 1280px) {
+    .footer-nav-block {
+        flex-direction: row;
+        align-items: center;
+        gap: 243px;
+    }
 }
 
 .footer-img {
@@ -15,7 +48,6 @@
     display: flex;
     justify-content: center;
     gap: 8px;
-    margin-bottom: 24px;
 }
 
 .footer-logo-text {
@@ -33,7 +65,6 @@
     display: flex;
     justify-content: center;
     gap: 20px;
-    margin-bottom: 44px;
 }
 
 
@@ -49,6 +80,27 @@
     margin-bottom: 44px;
 }
 
+@media only screen and (min-width: 768px) {
+
+    .footer-contacts-block {
+        padding-top: 28px;
+    }
+}
+
+@media only screen and (min-width: 1280px) {
+    .footer-contacts-block {
+        padding-top: 0px;
+    }
+
+    .footer-list {
+        margin-bottom: 16px;
+    }
+
+    .footer-list-icons {
+        margin-bottom: 40px;
+    }
+}
+
 .footer-socmedia-link {
     display: flex;
     width: 40px;
@@ -60,10 +112,35 @@
 
 }
 
+
+
 .footer-address-link {
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 14px;
     align-items: center;
+}
+
+@media only screen and (min-width: 768px) {
+    .footer-socmedia-link {
+        width: 44px;
+        height: 44px;
+    }
+
+    .footer-icon {
+        width: 28px;
+        height: 28px;
+    }
+
+    .footer-address {
+        font-size: 18px;
+        line-height: 1.33;
+        letter-spacing: -0.02em;
+
+    }
+
+    .footer-address-link {
+        gap: 20px;
+    }
 }
