--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,58 +1,64 @@
 <footer class="container footer-container section">
-  <div class="footer-logo-content">
-    <img
-      src="./img/image-footer.jpg"
-      class="footer-img"
-      alt="girl with bananas"
-      width="335"
-      height="172"
-    />
-    <a href="" class="link logo">
-      <svg class="footer-icon-logo" width="16" height="16">
-        <use href="./img/icons/icons.svg#icon-logo"></use>
-      </svg>
-      <span class="footer-logo-text">fresh harvest box</span>
-    </a>
+  <div class="footer-nav-block">
+    <div class="footer-logo-content">
+      <img
+        src="./img/image-footer.jpg"
+        class="footer-img"
+        alt="girl with bananas"
+        width="335"
+        height="172"
+      />
+      <a href="" class="link logo">
+        <svg class="footer-icon-logo" width="16" height="16">
+          <use href="./img/icons/icons.svg#icon-logo"></use>
+        </svg>
+        <span class="footer-logo-text">fresh harvest box</span>
+      </a>
+    </div>
+    <ul class="list footer-list">
+      <li class="footer-list-item">How It Works</li>
+      <li class="footer-list-item">Fruits</li>
+      <li class="footer-list-item">Contacts</li>
+    </ul>
   </div>
-  <ul class="list footer-list">
-    <li class="footer-list-item">How It Works</li>
-    <li class="footer-list-item">Fruits</li>
-    <li class="footer-list-item">Contacts</li>
-  </ul>
-  <ul class="list footer-list-icons">
-    <li class="footer-icons-item">
-      <a href="" class="footer-socmedia-link">
-        <svg class="footer-icon" width="24" height="24">
-          <use href="./img/icons/icons.svg#icon-facebook"></use>
-        </svg>
-      </a>
-    </li>
-    <li class="footer-icons-item">
-      <a href="" class="footer-socmedia-link">
-        <svg class="footer-icon" width="24" height="24">
-          <use href="./img/icons/icons.svg#icon-instagram"></use>
-        </svg>
-      </a>
-    </li>
-    <li class="footer-icons-item">
-      <a href="" class="footer-socmedia-link">
-        <svg class="footer-icon" width="24" height="24">
-          <use href="./img/icons/icons.svg#icon-youtube"></use>
-        </svg>
-      </a>
-    </li>
-  </ul>
-  <address class="footer-address">
-    <ul class="footer-address-link">
-      <li>
-        <a href="tel:+380684439426">+380 (68) 443-94-26</a>
+
+  <div class="footer-contacts-block">
+    <ul class="list footer-list-icons">
+      <li class="footer-icons-item">
+        <a href="" class="footer-socmedia-link">
+          <svg class="footer-icon" width="24" height="24">
+            <use href="./img/icons/icons.svg#icon-facebook"></use>
+          </svg>
+        </a>
       </li>
-      <li>
-        <p>
-          1678 S. Pioneer Road <br />
-          Salt Lake City UT <br />84104
-        </p>
+      <li class="footer-icons-item">
+        <a href="" class="footer-socmedia-link">
+          <svg class="footer-icon" width="24" height="24">
+            <use href="./img/icons/icons.svg#icon-instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="footer-icons-item">
+        <a href="" class="footer-socmedia-link">
+          <svg class="footer-icon" width="24" height="24">
+            <use href="./img/icons/icons.svg#icon-youtube"></use>
+          </svg>
+        </a>
       </li>
     </ul>
-  </address>
+    <address class="footer-address">
+      <ul class="footer-address-link">
+        <li>
+          <a href="tel:+380684439426">+380 (68) 443-94-26</a>
+        </li>
+        <li>
+          <p>
+            1678 S. Pioneer Road <br />
+            Salt Lake City <br />
+            UT 84104
+          </p>
+        </li>
+      </ul>
+    </address>
+  </div>
 </footer>
