--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,13 +1,34 @@
 <footer class="container footer-container section">
   <div class="footer-nav-block">
     <div class="footer-logo-content">
-      <img
-        src="./img/image-footer.jpg"
-        class="footer-img"
-        alt="girl with bananas"
-        width="335"
-        height="172"
-      />
+      <picture>
+        <!-- Tablet and Desktop screen  -->
+        <source
+          media="(min-width: 768px)"
+          srcset="
+            ./img/footer/image-footer.jpg    1x,
+            ./img/footer/image-footer@2x.jpg 2x
+          "
+          type="image/jpg"
+        />
+        <!-- Mobile screen -->
+        <source
+          media="(max-width: 767px)"
+          srcset="
+            ./img/footer/image-footer-mob.jpg    1x,
+            ./img/footer/image-footer-mob@2x.jpg 2x
+          "
+          type="image/jpg"
+        />
+        <img
+          src="./img/image-footer.jpg"
+          class="footer-img"
+          alt="girl with bananas"
+          width="349"
+          height="179"
+        />
+      </picture>
+
       <a href="" class="link logo">
         <svg class="footer-icon-logo" width="16" height="16">
           <use href="./img/icons/icons.svg#icon-logo"></use>
@@ -16,9 +37,9 @@
       </a>
     </div>
     <ul class="list footer-list">
-      <li class="footer-list-item">How It Works</li>
-      <li class="footer-list-item">Fruits</li>
-      <li class="footer-list-item">Contacts</li>
+      <li class="footer-list-item"><a href="">How It Works</a></li>
+      <li class="footer-list-item"><a href="">Fruits</a></li>
+      <li class="footer-list-item"><a href="">Contacts</a></li>
     </ul>
   </div>
 
