--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -14,7 +14,14 @@
       </p>
       <div class="top-card">
         <h3 class="top-card-text">Fruit</h3>
-        <img class="hero-img" href="../img/" />
+        <div class="thamb-hero">
+          <img
+            class="hero-img"
+            src="/img/hero/nwatermelon-mob@1.png"
+            width="200"
+            height="172"
+          />
+        </div>
         <p class="low-card-text">
           Refreshing and juicy, watermelon is the perfect summer treat and a
           great source of hydration
@@ -30,7 +37,12 @@
 
         <div class="top-card low-card">
           <h3 class="top-card-text">Fruit</h3>
-          <img class="hero-img" />
+          <img
+            class="hero-img"
+            src="../img/hero/strawberrybox-mob@1.png"
+            width="162"
+            height="185"
+          />
           <p class="low-card-text">
             Sweet and juicy, strawberries are packed with vitamin C and
             antioxidants, making them a delicious and healthy snack
