--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -2,7 +2,7 @@
   background: #ae1332;
 }
 .hero-container {
-  max-width: 374px;
+  padding-top: 104px;
 }
 @media screen and (min-width: 375px) and(max-width:767px) {
   .hero-container {
@@ -10,14 +10,23 @@
   }
 }
 .background {
+  position: relative;
   height: 557px;
   border-radius: 500px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url(./img/young-energetic-red-haired-woman-white-t-shirt-holding-tasty-oranges-pink-background\ 1girl.png);
+  background-image: url(../img/hero/hero-girl-mob@1.png);
+  /* border-style: solid;
+  border-width: rgba(255, 255, 255, 1) rgba(255, 255, 255, 0.44)
+    rgba(255, 255, 255, 0); */
 }
+
+/* url(../img/hero/imagebananas-background-mob@1.png),
+    url(../img/hero/imagestrawberry-background-mob@1.png) */
 .hero-text {
+  position: absolute;
+  top: -10%;
   text-transform: uppercase;
   text-align: center;
   font-family: 'DM Sans';
@@ -31,6 +40,9 @@
   /* text-shadow: 0px 4px 70px rgba(0, 0, 0, 0.1); */
 }
 .hero-btn {
+  position: absolute;
+  left: 38%;
+  top: 93%;
   width: 80px;
   height: 80px;
   font-family: 'DM Sans';
@@ -52,6 +64,12 @@ text-align: center; */
   transform: rotate(-14deg);
   border-radius: 50%;
   border-color: transparent;
+}
+.hero-btn:hover {
+  color: #a4cb66;
+}
+.hero-btn:focus {
+  color: #a4cb66;
 }
 .hero-cards {
   max-width: 279px;
@@ -95,11 +113,13 @@ text-align: center; */
   letter-spacing: -0.04em;
   color: #ffffff;
   text-shadow: 0px 4px 70px rgba(0, 0, 0, 0.1);
+  margin-bottom: 61px;
+}
+.thamb-hero {
 }
 .hero-img {
   display: block;
-  width: 200px;
-  height: 179px;
+
   margin: auto;
 }
 .low-card-text {
@@ -131,6 +151,7 @@ text-align: center; */
   /* margin-left: auto; */
   align-content: center;
   justify-content: center;
+  padding-left: 0;
 }
 .hero-teg {
   padding: 12px 32px;
