--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
-<footer class="footer">
-  <div class="container footer-container section">
+<footer class="footer section">
+  <div class="container footer-container">
     <div class="footer-nav-block">
       <div class="footer-logo-content">
         <picture>
