--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,1 +1,25 @@
-<section></section>
+<div class="container">
+    <section class="contacts-section section">
+        <div class="images-box">
+            <h1 class="contacts-title">FRESH HARVEST BOX HAS GOT YOU COVERED</h1>
+            <ul class="contacts-list">
+                <li>
+                    <img src="../img/img.contacts/img.contacts.mobile@1x.jpg" alt="" width="335px" height="476px">
+                </li>
+                <li class="contacts-image">
+                    <img src="../img/img.contacts/img.contacts.tablet2@1x.jpg" alt="" width="344px" height="480px">
+                </li>
+            </ul>
+        </div>
+        <p class="contacts-text">Our boxes are packed with delicious, nutritious fruits and vegetables, perfect for anyone looking to eat healthier or support local farmers. Order your box today and start enjoying the best that nature has to offer!</p>
+        <form class="contacts-form">
+            <input type="email" name="comtacts-email" class="contacts-input" placeholder="Enter email...">
+            <button type="submit" class="contacts-button"></button>
+        </form>
+        <!-- <form class="footer-form" autocomplete="off">
+            <input type="email" class="footer-form-input" name="footer-email" id="footer-email" required minlength="2" placeholder="Email">
+            <button type="submit" class="footer-form-button">Subscribe
+            </button>
+        </form> -->
+    </section>
+</div>
