--- a/src/partials/fruits.html
+++ b/src/partials/fruits.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section" id="fruits">
     <div class="container">
         <h2 class="section-title">oRGANIC fRUITS</h2>
         <p class="section-desc">
@@ -13,82 +13,167 @@
 
         <ul class="card-set product-list list">
             <li class="card-set-item card strawberry">
-                <p class="card-title">Strawberry</p>
-                <p class="card-uppertitle">Plant</p>
-                <img class="card-img" src="../img/fruits/img-1.png" alt="Strawberry" width="295" height="275" />
-                <div class="card-price-box">
-                    <p class="card-price">100 UAH <b>&#824;</b> kg</p>
-                </div>
+                <article>
+                    <p class="card-title">Strawberry</p>
+                    <p class="card-uppertitle">Plant</p>
+                    <picture>
+                        <source media="(min-width: 320px)"
+                            srcset="./img/fruits/strawberry@1x.webp 1x, ./img/fruits/strawberry@2x.webp 2x"
+                            type="image/webp" />
+                        <source media="(min-width: 320px)"
+                            srcset="./img/fruits/strawberry@1x.png 1x, ./img/fruits/strawberry@2x.png 2x"
+                            type="image/png" />
+                        <img class="card-img" src="./img/fruits/strawberry@1x.png" alt="Strawberry" width="295"
+                            height="2" loading="lazy" />
+                    </picture>
+                    <div class="card-price-box">
+                        <p class="card-price">100 UAH / kg</p>
+                    </div>
+                </article>
             </li>
             <li class="card-set-item card banana">
-                <p class="card-title">Banana</p>
-                <p class="card-uppertitle">Plant</p>
-                <img class="card-img" src="../img/fruits/img-2.png" alt="Banana" width="295" height="271" />
-                <div class="card-price-box">
-                    <p class="card-price">80 UAH <b>&#824;</b> kg</p>
-                </div>
+                <article>
+                    <p class="card-title">Banana</p>
+                    <p class="card-uppertitle">Plant</p>
+                    <picture>
+                        <source media="(min-width: 320px)"
+                            srcset="./img/fruits/banana@1x.webp 1x, ./img/fruits/banana@2x.webp 2x" type="image/webp" />
+                        <source media="(min-width: 320px)"
+                            srcset="./img/fruits/banana@1x.png 1x, ./img/fruits/banana@2x.png 2x" type="image/png" />
+                        <img class="card-img" src="./img/fruits/banana@1x.png" alt="Banana" width="295" height="276"
+                            loading="lazy" />
+                    </picture>
+                    <div class="card-price-box">
+                        <p class="card-price">80 UAH / kg</p>
+                    </div>
+                </article>
             </li>
             <li class="card-set-item card watermelon">
-                <p class="card-title">Watermelon</p>
-                <p class="card-uppertitle">Plant</p>
-                <img class="card-img" src="../img/fruits/img-3.png" alt="Watermelon" width="295" height="276" />
-                <div class="card-price-box">
-                    <p class="card-price">40 UAH <b>&#824;</b> kg</p>
-                </div>
+                <article>
+                    <p class="card-title">Watermelon</p>
+                    <p class="card-uppertitle">Plant</p>
+                    <picture>
+                        <source media="(min-width: 320px)"
+                            srcset="./img/fruits/watermelon@1x.webp 1x, ./img/fruits/watermelon@2x.webp 2x"
+                            type="image/webp" />
+                        <source media="(min-width: 320px)"
+                            srcset="./img/fruits/watermelon@1x.png 1x, ./img/fruits/watermelon@2x.png 2x"
+                            type="image/png" />
+                        <img class="card-img" src="./img/fruits/watermelon@1x.png" alt="Watermelon" width="295"
+                            height="276" loading="lazy" />
+                    </picture>
+                    <div class="card-price-box">
+                        <p class="card-price">40 UAH / kg</p>
+                    </div>
+                </article>
             </li>
             <li class="card-set-item card lime">
-                <p class="card-title">Lime</p>
-                <p class="card-uppertitle">Plant</p>
-                <img class="card-img" src="../img/fruits/img-4.png" alt="Lime" width="295" height="276" />
-                <div class="card-price-box">
-                    <p class="card-price">60 UAH <b>&#824;</b> kg</p>
-                </div>
+                <article>
+                    <p class="card-title">Lime</p>
+                    <p class="card-uppertitle">Plant</p>
+                    <picture>
+                        <source media="(min-width: 320px)"
+                            srcset="./img/fruits/lime@1x.webp 1x, ./img/fruits/lime@2x.webp 2x" type="image/webp" />
+                        <source media="(min-width: 320px)"
+                            srcset="./img/fruits/lime@1x.png 1x, ./img/fruits/lime@2x.png 2x" type="image/png" />
+                        <img class="card-img" src="./img/fruits/lime@1x.png" alt="Lime" width="295" height="276"
+                            loading="lazy" />
+                    </picture>
+                    <div class="card-price-box">
+                        <p class="card-price">60 UAH / kg</p>
+                    </div>
+                </article>
             </li>
             <li class="card-set-item card apple">
-                <p class="card-title">Apple</p>
-                <p class="card-uppertitle">Plant</p>
-                <img class="card-img" src="../img/fruits/img-5.png" alt="Apple" width="295" height="276" />
-                <div class="card-price-box">
-                    <p class="card-price">50 UAH <b>&#824;</b> kg</p>
-                </div>
+                <article>
+                    <p class="card-title">Apple</p>
+                    <p class="card-uppertitle">Plant</p>
+                    <picture>
+                        <source media="(min-width: 320px)"
+                            srcset="./img/fruits/apple@1x.webp 1x, ./img/fruits/apple@2x.webp 2x" type="image/webp" />
+                        <source media="(min-width: 320px)"
+                            srcset="./img/fruits/apple@1x.png 1x, ./img/fruits/apple@2x.png 2x" type="image/png" />
+                        <img class="card-img" src="./img/fruits/apple@1x.png" alt="Apple" width="295" height="276"
+                            loading="lazy" />
+                    </picture>
+                    <div class="card-price-box">
+                        <p class="card-price">50 UAH / kg</p>
+                    </div>
+                </article>
             </li>
             <li class="card-set-item card peach">
-                <p class="card-title">Peach</p>
-                <p class="card-uppertitle">Plant</p>
-                <img class="card-img" src="../img/fruits/img-6.png" alt="Peach" width="295" height="276" />
-                <div class="card-price-box">
-                    <p class="card-price">80 UAH <b>&#824;</b> kg</p>
-                </div>
+                <article>
+                    <p class="card-title">Peach</p>
+                    <p class="card-uppertitle">Plant</p>
+                    <picture>
+                        <source media="(min-width: 320px)"
+                            srcset="./img/fruits/peach@1x.webp 1x, ./img/fruits/peach@2x.webp 2x" type="image/webp" />
+                        <source media="(min-width: 320px)"
+                            srcset="./img/fruits/peach@1x.png 1x, ./img/fruits/peach@2x.png 2x" type="image/png" />
+                        <img class="card-img" src="./img/fruits/peach@1x.png" alt="Peach" width="295" height="276"
+                            loading="lazy" />
+                    </picture>
+                    <div class="card-price-box">
+                        <p class="card-price">80 UAH / kg</p>
+                    </div>
+                </article>
             </li>
             <li class="card-set-item card plums">
-                <p class="card-title">Plums</p>
-                <p class="card-uppertitle">Plant</p>
-                <img class="card-img" src="../img/fruits/img-7.png" alt="Plums" width="295" height="276" />
-                <div class="card-price-box">
-                    <p class="card-price">40 UAH <b>&#824;</b> kg</p>
-                </div>
+                <article>
+                    <p class="card-title">Plums</p>
+                    <p class="card-uppertitle">Plant</p>
+                    <picture>
+                        <source media="(min-width: 320px)"
+                            srcset="./img/fruits/plums@1x.webp 1x, ./img/fruits/plums@2x.webp 2x" type="image/webp" />
+                        <source media="(min-width: 320px)"
+                            srcset="./img/fruits/plums@1x.png 1x, ./img/fruits/plums@2x.png 2x" type="image/png" />
+                        <img class="card-img" src="./img/fruits/plums@1x.png" alt="Plums" width="295" height="276"
+                            loading="lazy" />
+                    </picture>
+                    <div class="card-price-box">
+                        <p class="card-price">40 UAH / kg</p>
+                    </div>
+                </article>
             </li>
             <li class="card-set-item card orange">
-                <p class="card-title">Orange</p>
-                <p class="card-uppertitle">Plant</p>
-                <img class="card-img" src="../img/fruits/img-8.png" alt="Orange" width="295" height="276" />
-                <div class="card-price-box">
-                    <p class="card-price">60 UAH <b>&#824;</b> kg</p>
-                </div>
+                <article>
+                    <p class="card-title">Orange</p>
+                    <p class="card-uppertitle">Plant</p>
+                    <picture>
+                        <source media="(min-width: 320px)"
+                            srcset="./img/fruits/orange@1x.webp 1x, ./img/fruits/orange@2x.webp 2x" type="image/webp" />
+                        <source media="(min-width: 320px)"
+                            srcset="./img/fruits/orange@1x.png 1x, ./img/fruits/orange@2x.png 2x" type="image/png" />
+                        <img class="card-img" src="./img/fruits/orange@1x.png" alt="Orange" width="295" height="276"
+                            loading="lazy" />
+                    </picture>
+                    <div class="card-price-box">
+                        <p class="card-price">60 UAH / kg</p>
+                    </div>
+                </article>
             </li>
             <li class="card-set-item card kiwi">
-                <p class="card-title">Kiwi</p>
-                <p class="card-uppertitle">Plant</p>
-                <img class="card-img" src="../img/fruits/img-9.png" alt="Kiwi" width="295" height="276" />
-                <div class="card-price-box">
-                    <p class="card-price">90 UAH <b>&#824;</b> kg</p>
-                </div>
+                <article>
+                    <p class="card-title">Kiwi</p>
+                    <p class="card-uppertitle">Plant</p>
+                    <picture>
+                        <source media="(min-width: 320px)"
+                            srcset="./img/fruits/kiwi@1x.webp 1x, ./img/fruits/kiwi@2x.webp 2x" type="image/webp" />
+                        <source media="(min-width: 320px)"
+                            srcset="./img/fruits/kiwi@1x.png 1x, ./img/fruits/kiwi@2x.png 2x" type="image/png" />
+                        <img class="card-img" src="./img/fruits/kiwi@1x.png" alt="Kiwi" width="295" height="276"
+                            loading="lazy" />
+                    </picture>
+                    <div class="card-price-box">
+                        <p class="card-price">90 UAH / kg</p>
+                    </div>
+                </article>
             </li>
         </ul>
 
         <button class="fruits-btn btn" type="button">
             <svg class="fruits-btn-icon" width="14" height="14">
-                <use href="../img/icons.svg#icon-btn"></use>
+                <use href="./img/icons/icons.svg#icon-fuits-btn"></use>
             </svg>
             <span class="fruits-btn-txt">oRDER</span>
         </button>
