--- a/src/css/fruits.css
+++ b/src/css/fruits.css
@@ -76,7 +76,7 @@
 }
 
 .card-price-box {
-  width: 121px;
+  display: inline-block;
   padding: 12px 24px;
 
   background-color: var(--light-bg-cl);
@@ -85,7 +85,6 @@
 }
 @media only screen and (min-width: 768px) {
   .card-price-box {
-    width: 136px;
     padding: 12px 21px;
   }
 }
