--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,30 +4,16 @@
       <div class="footer-logo-content">
         <picture>
           <!-- Tablet and Desktop screen  -->
-          <source
-            media="(min-width: 768px)"
-            srcset="
+          <source media="(min-width: 768px)" srcset="
               ./img/footer/image-footer.jpg    1x,
               ./img/footer/image-footer@2x.jpg 2x
-            "
-            type="image/jpg"
-          />
+            " type="image/jpg" />
           <!-- Mobile screen -->
-          <source
-            media="(max-width: 767px)"
-            srcset="
+          <source media="(max-width: 767px)" srcset="
               ./img/footer/image-footer-mob.jpg    1x,
               ./img/footer/image-footer-mob@2x.jpg 2x
-            "
-            type="image/jpg"
-          />
-          <img
-            src="./img/image-footer.jpg"
-            class="footer-img"
-            alt="girl with bananas"
-            width="349"
-            height="179"
-          />
+            " type="image/jpg" />
+          <img src="./img/image-footer.jpg" class="footer-img" alt="girl with bananas" width="349" height="179" />
         </picture>
 
         <a href="./index.html" class="link logo">
@@ -42,12 +28,10 @@
           <a href="" class="link footer-list-link">How It Works</a>
         </li>
         <li class="footer-list-item">
-          <a href="" class="link footer-list-link">Fruits</a>
+          <a href="#fruits" class="link footer-list-link">Fruits</a>
         </li>
         <li class="footer-list-item">
-          <a href="#footer-contacts-ankor" class="link footer-list-link"
-            >Contacts</a
-          >
+          <a href="#footer-contacts-ankor" class="link footer-list-link">Contacts</a>
         </li>
       </ul>
     </div>
@@ -79,9 +63,7 @@
       <address class="footer-address">
         <ul class="list footer-address-link">
           <li>
-            <a class="link footer-address-tel" href="tel:+380684439426"
-              >+380 (68) 443-94-26</a
-            >
+            <a class="link footer-address-tel" href="tel:+380684439426">+380 (68) 443-94-26</a>
           </li>
           <li>
             <p class="footer-address-text">
