--- a/src/partials/thank-you.html
+++ b/src/partials/thank-you.html
@@ -1,5 +1,5 @@
-<div class="backdrop-thank-you">
-  <div class="window-thank-you">
+<div class="backdrop-thank-you overlay js-overlay-modal">
+  <div class="window-thank-you modal" data-modal="2">
     <picture>
       <source
         srcset="
@@ -33,9 +33,9 @@
         with the best possible experience!
       </p>
     </div>
-    <button class="btn-thank-you" type="button">
+    <button class="btn-thank-you js-modal-close" type="button">
       <svg class="icon-btn">
-        <use href="../img/icons/icons.svg#icon-close-window"></use>
+        <use href="./img/icons/icons.svg#icon-window-close"></use>
       </svg>
     </button>
   </div>
