--- a/src/css/common.css
+++ b/src/css/common.css
@@ -134,3 +134,31 @@ body {
     --item: 3;
   }
 }
+
+/* Modal Windows */
+.overlay {
+  /* Скрываем подложку  */
+  opacity: 0;
+  visibility: hidden;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 20;
+  transition: 0.3s all;
+}
+.modal.active,
+.overlay.active {
+  /* Открываем подложку и окно  */
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal {
+  /* Скрываем окна  */
+  opacity: 0;
+  visibility: hidden;
+}
