--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,20 @@
 <header class="header">
-
+  <button class="basket-button"></button>
+  <button
+    class="mobile-menu-button"
+    aria-expanded="false"
+    aria-controls="mobile-menu"
+    data-menu-button
+  >
+    <svg class="mobile-menu-icon" width="24" height="24">
+      <use
+        class="mobile-menu-icon-open"
+        href="./img/icons/icons.svg#icon-mob-menu"
+      ></use>
+      <use
+        class="mobile-menu-icon-close"
+        href="./img/icons/icons.svg#icon-window-close"
+      ></use>
+    </svg>
+  </button>
 </header>
