--- a/src/css/contacts.css
+++ b/src/css/contacts.css
@@ -1,125 +1,168 @@
+/* CONTACTS-SECTION */
+
+/* MOBILE STYLES */
 .contacts-title{
-font-family: 'DM Sans', sans-serif;
-font-weight: 500;
-font-size: 32px;
-line-height: 1;
-letter-spacing: -0.04em;
-text-align: center;
-color: rgba(255, 255, 255, 1);
-text-shadow: 0px 4px 70px 0px rgba(0, 0, 0, 0.1);
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 1;
+  letter-spacing: -0.04em;
+  text-align: center;
+  color: rgba(255, 255, 255, 1);
+  text-shadow: 0px 4px rgba(0, 0, 0, 0.1);
 
-min-width: 100%; 
-max-width: 335px;
+  position: absolute;
+  top: 0;
+  left: auto;
+  right: auto;
 
-position: absolute;
-top: 0;
-left: 50%;
-transform: translate(-50%, -53%);
+  transform: translateY(-53%);
 }
 
-.images-box{
-    position: relative;
+.contacts-box{
+  position: relative;
 }
 
 .contacts-section{
-    padding-top: 51px; 
-}
-@media only screen and (min-width: 768px) {
-  
-    .contacts-title {
-      top: -4%;
-    }
-  }
-@media only screen and (min-width: 768px) {
-  
-  .contacts-section {
-    padding-top: 73px;
-  }
+  padding-top: 53px; 
 }
 
+.contacts-list{
+  display: flex;
+  gap: 16px;
+}
+
+.contacts-text{
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.28;
+  letter-spacing: -0.04em;
+  color: rgba(255, 255, 255, 1);
+  text-align: center;
+  max-width: 492px;
+  margin: auto;
+  margin-top: 80px;
+  margin-bottom: 80px;
+  text-shadow: 0px 4px rgba(0, 0, 0, 0.1);
+
+}
+
+/* CONTACTS FORM  */
+.contacts-input{
+  background-color: transparent;
+  color: rgba(255, 255, 255, 1);
+  width: 292px;
+  height: 48px;
+  border: 1px solid transparent;
+  outline: 1px solid  rgba(255, 255, 255, 0.3);
+  border-radius: 25px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 24px;
+  padding-right: 126px;
+}
+
+.contacts-input::placeholder{
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.3;
+  letter-spacing: -0.04em;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.contacts-input:not(:placeholder-shown):required:invalid{
+  outline: 1px solid #31d0aa;
+}
+
+.contacts-input:not(:placeholder-shown):required:invalid{
+  outline: 1px solid red;
+}
+    
+.contacts-input:not(:placeholder-shown):required:valid{
+  outline: 1px solid#31d0aa;
+}
+
+.contacts-button{
+  width: 102px;
+  height: 48px;
+  background-color: rgba(157, 193, 98, 1);
+  border:1px transparent ;
+  border-radius: 25px;
+  padding: 15px 35px 15px 35px;
+  color: rgba(255, 255, 255, 1);
+
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts-button:hover,
+.contacts-button:focus{
+  background-color: #fff;
+  color: rgba(157, 193, 98, 1);
+  cursor: pointer;
+}
+
+.contacts-form-box{
+  position: relative;
+  max-width: 292px;
+  margin: auto;
+}
 
 
-
+/* MOBILE STYLES */
 @media only screen and (max-width: 768px) {
   .contacts-image {
     display: none;
   }
 }
 
-.contacts-list{
-    display: flex;
-    gap: 16px;
+@media only screen and (max-width: 768px) {
+  .contacts-text {
+    display: none;
+  }
 }
+
+/* TABLET STYLES */
 @media only screen and (min-width: 768px) {
   .contacts-title {
-font-size: 52px;
-line-height: 1;
-max-width: 600px;
-}
+    top: -5%;
+    left: 4%;
+  }
 }
 
-@media only screen and (min-width: 1200px) {
-    .contacts-title {
-        font-size: 64px;
-        line-height: 1;
-;
-    }
-}
-.contacts-text{
-font-family: 'DM Sans', sans-serif;
-font-weight: 400;
-font-size: 14px;
-line-height: 1.28;
-letter-spacing: -0.04em;
-color: rgba(255, 255, 255, 1);
-text-align: center;
-max-width: 492px;
-margin: auto;
-margin-top: 80px;
-margin-bottom: 80px;
+@media only screen and (min-width: 768px) {
+  .contacts-section {
+    padding-top: 79px;
+  }
 }
 
 
-
-
-
-.contacts-input{
-    background-color: transparent;
-    width: 292px;
-    height: 48px;
-    border: 1px solid transparent;
-    outline: 1px solid  rgba(255, 255, 255, 1);
-
-    opacity: 30%;
-
-
-
-    /* background-color: transparent;
-    width: 100%;
-    height: 40px;
-      
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-right: 16px;
-    padding-left: 16px;
-      
-    outline: 1px solid var(--white);
-      
-    border-radius: 4px;
-    border: 2px solid transparent;
-    color: var(--white);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    outline: 1px solid #000;
-    
-    margin-bottom: 16px; */
+@media only screen and (min-width: 768px) {
+  .contacts-title {
+    font-size: 54px;
+    line-height: 1;
+    max-width: 648px;
+  }
 }
 
-.contacts-input::placeholder{
-font-family: 'DM Sans', sans-serif;
-font-weight: 400;
-font-size: 14px;
-line-height: 1.28;
-letter-spacing: -0.04em;
-color: rgba(255, 255, 255, 1);
-opacity: 50%;
+@media only screen and (max-width: 768px) {
+  .contacts-form {
+    display: none;
+  }
+}
+
+/* DESKTOP STYLES */
+@media only screen and (min-width: 1255px) {
+  .contacts-title {
+    font-size: 64px;
+    line-height: 1;
+    max-width: 740px;
+    top: -4%;
+    left: 18%;
+  }
 }
