--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,8 +23,7 @@
   font-weight: 400;
 
   color: #242424;
-  background-color: #AE1332;
-  /* background-color: rgba(255, 255, 255, 0.87); */
+  background-color: rgba(255, 255, 255, 0.87);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
