--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,7 +17,7 @@
 
 
 :root {
-  font-family: 'DM Sans', inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'DM Sans', Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
