--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -2,22 +2,22 @@
     <section class="contacts-section section">
         <div class="contacts-box">
             <h1 class="contacts-title">FRESH HARVEST BOX HAS GOT YOU COVERED</h1>
-            <ul class="contacts-list">
+            <ul class="contacts-list list">
                 <li>
                     <picture>
                         <!-- Desktop screen -->
                         <source media="(min-width: 1255px)"
-                            srcset="./img/contacts/img.contacts.desktop1@1x.png 1x, ../img/contacts/img.contacts.desktop1@2x.png 2x"
+                            srcset="../img/contacts/img.contacts.desktop1@1x.png 1x, ../img/contacts/img.contacts.desktop1@2x.png 2x"
                             type="image/jpg">
                         <!-- Tablet screen -->
                         <source media="(min-width: 768px)"
-                            srcset="./img/contacts/img.contacts.tablet1@1x.png 1x, ../img/contacts/img.contacts.tablet1@2x.png 2x"
+                            srcset="../img/contacts/img.contacts.tablet1@1x.png 1x, ../img/contacts/img.contacts.tablet1@2x.png 2x"
                             type="image/jpg">
                         <!-- Phone screen -->
                         <source media="(max-width: 767px)"
-                            srcset="./img/contacts/img.contacts.mobile@1x.png 1x, ../img/contacts/img.contacts.mobile@2x.png 2x"
+                            srcset="../img/contacts/img.contacts.mobile@1x.png 1x, ../img/contacts/img.contacts.mobile@2x.png 2x"
                             type="image/jpg">
-                        <img src="./img/contacts/img.contacts.mobile@1x.png" alt="Melon image">
+                        <img src="../img/contacts/img.contacts.mobile@1x.png" alt="Melon image">
                     </picture>
                 </li>
                 <li class="contacts-image">
