--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,16 +4,30 @@
       <div class="footer-logo-content">
         <picture>
           <!-- Tablet and Desktop screen  -->
-          <source media="(min-width: 768px)" srcset="
-              ./img/footer/image-footer.jpg    1x,
-              ./img/footer/image-footer@2x.jpg 2x
-            " type="image/jpg" />
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              ./img/footer/image-footer.png    1x,
+              ./img/footer/image-footer@2x.png 2x
+            "
+            type="image/jpg"
+          />
           <!-- Mobile screen -->
-          <source media="(max-width: 767px)" srcset="
-              ./img/footer/image-footer-mob.jpg    1x,
-              ./img/footer/image-footer-mob@2x.jpg 2x
-            " type="image/jpg" />
-          <img src="./img/image-footer.jpg" class="footer-img" alt="girl with bananas" width="349" height="179" />
+          <source
+            media="(max-width: 767px)"
+            srcset="
+              ./img/footer/image-footer-mob.png    1x,
+              ./img/footer/image-footer-mob@2x.png 2x
+            "
+            type="image/jpg"
+          />
+          <img
+            src="./img/image-footer.png"
+            class="footer-img"
+            alt="girl with bananas"
+            width="349"
+            height="179"
+          />
         </picture>
 
         <a href="./index.html" class="link logo">
@@ -23,37 +37,41 @@
           <span class="footer-logo-text">fresh harvest box</span>
         </a>
       </div>
-      <ul class="list footer-list">
+      <nav class="footer-nav">
+        <ul class="list footer-list">
         <li class="footer-list-item">
-          <a href="" class="link footer-list-link">How It Works</a>
+          <a href="#work-ankor" class="link footer-list-link">How It Works</a>
         </li>
         <li class="footer-list-item">
           <a href="#fruits" class="link footer-list-link">Fruits</a>
         </li>
         <li class="footer-list-item">
-          <a href="#footer-contacts-ankor" class="link footer-list-link">Contacts</a>
+          <a href="#footer-contacts-ankor" class="link footer-list-link"
+            >Contacts</a
+          >
         </li>
       </ul>
+    </nav>
     </div>
 
     <div class="footer-contacts-block" id="footer-contacts-ankor">
       <ul class="list footer-list-icons">
         <li class="footer-icons-item">
-          <a href="" class="footer-socmedia-link">
+          <a href="https://www.facebook.com/" class="footer-socmedia-link" target="_blank" rel="noreferrer noopener" aria-label="facebook">
             <svg class="footer-icon" width="24" height="24">
               <use href="./img/icons/icons.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
         <li class="footer-icons-item">
-          <a href="" class="footer-socmedia-link">
+          <a href="https://www.instagram.com/" class="footer-socmedia-link" target="_blank" rel="noreferrer noopener" aria-label="instagram">
             <svg class="footer-icon" width="24" height="24">
               <use href="./img/icons/icons.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="footer-icons-item">
-          <a href="" class="footer-socmedia-link">
+          <a href="https://www.youtube.com/" class="footer-socmedia-link" target="_blank" rel="noreferrer noopener" aria-label="youtube" >
             <svg class="footer-icon" width="24" height="24">
               <use href="./img/icons/icons.svg#icon-youtube"></use>
             </svg>
@@ -63,12 +81,15 @@
       <address class="footer-address">
         <ul class="list footer-address-link">
           <li>
-            <a class="link footer-address-tel" href="tel:+380684439426">+380 (68) 443-94-26</a>
+            <a class="link footer-address-tel" href="tel:+380684439426"
+              >+380 (68) 443-94-26</a
+            >
           </li>
           <li>
-            <p class="footer-address-text">
-              1678 S. Pioneer Road Salt Lake City
-              <span class="footer-address-postcode">UT 84104</span>
+              <a href="https://goo.gl/maps/4eP2H9T3cd51cepa8" target="_blank" class="link footer-address-text" rel="noreferrer noopener" aria-label="google maps" >
+                1678 S. Pioneer Road Salt Lake City
+                <span class="footer-address-postcode">UT 84104</span>
+              </a>
             </p>
           </li>
         </ul>
