feature/add-js-to-contact

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,7 +1,7 @@
 <div class="container">
     <section class="contacts-section section">
         <div class="contacts-box">
-            <h1 class="contacts-title">FRESH HARVEST BOX HAS GOT YOU COVERED</h1>
+            <h2 class="contacts-title">FRESH HARVEST BOX HAS GOT YOU COVERED</h2>
             <ul class="contacts-list list">
                 <li>
                     <picture>
@@ -43,7 +43,7 @@
             <div class="contacts-form-box">
                 <input type="email" name="comtacts-email" class="contacts-input" placeholder="Enter email..." required
                     minlength="2">
-                <button type="submit" class="contacts-button">Send</button>
+                <button type="submit" class="contacts-button js-open-modal" data-modal="2">Send</button>
             </div>
         </form>
     </section>
