work-it (first review)

--- a/src/partials/work-it.html
+++ b/src/partials/work-it.html
@@ -1,1 +1,39 @@
-<section class="section" id="work-it"></section>
+<section class="section" id="work-ankor">
+  <div class="container container-workit">
+    <h2 class="section-title workit">
+      To order your fruit basket, simply follow these easy steps
+    </h2>
+    <p class="section-desc workit">
+      Our baskets are assembled with care and delivered straight to your
+      doorstep, so you can enjoy the taste of fresh fruit without ever leaving
+      your home. Whether you're looking for a healthy snack or a thoughtful
+      gift, our fruit baskets are the perfect choice.
+    </p>
+    <ul class="step-list list">
+      <li class="step-item">
+        <h3 class="steps-title first">First Step</h3>
+        <p class="steps-uppertitle">
+          Just choose the fruit you want to order by clicking on the checkboxes
+          next to it.
+        </p>
+      </li>
+      <li class="step-item">
+        <h3 class="steps-title second">Second Step</h3>
+        <p class="steps-uppertitle">
+          Click on the basket and fill out the form.
+        </p>
+      </li>
+      <li class="step-item">
+        <h3 class="steps-title third">Third Step</h3>
+        <p class="steps-uppertitle">
+          Sit back and relax! Your fresh fruit basket will be delivered.
+        </p>
+      </li>
+    </ul>
+    <img
+      class="image-gif"
+      src="../img/work-it/freshharvestbox-mobile.gif"
+      alt="Fruit Gif Picture"
+    />
+  </div>
+</section>
