feature/add-id-to-contacts

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <section class="contacts-section section">
+<section class="contacts-section section" id="footer-contacts-ankor">
+    <div class="container">
         <div class="contacts-box">
             <h2 class="contacts-title">FRESH HARVEST BOX HAS GOT YOU COVERED</h2>
             <ul class="contacts-list list">
@@ -46,5 +46,5 @@
                 <button type="submit" class="contacts-button js-open-modal" data-modal="2">Send</button>
             </div>
         </form>
-    </section>
-</div>
+    </div>
+</section>
