work-it (include gif)

--- a/src/partials/work-it.html
+++ b/src/partials/work-it.html
@@ -30,10 +30,22 @@
         </p>
       </li>
     </ul>
-    <img
-      class="image-gif"
-      src="../img/work-it/freshharvestbox-mobile.gif"
-      alt="Fruit Gif Picture"
-    />
+    <picture>
+      <source
+        media="(min-width: 1280px)"
+        srcset="../img/work-it/freshharvestbox-desktop.gif"
+        width="860px"
+      />
+      <source
+        media="(min-width: 768px)"
+        srcset="../img/work-it/freshharvestbox-tablet.gif"
+        width="704px"
+      />
+      <img
+        src="../img/work-it/freshharvestbox-mobile.gif"
+        style="width: auto"
+        class="image-gif"
+      />
+    </picture>
   </div>
 </section>
