work-it (change gif)

--- a/src/partials/work-it.html
+++ b/src/partials/work-it.html
@@ -33,16 +33,16 @@
     <picture>
       <source
         media="(min-width: 1280px)"
-        srcset="../img/work-it/freshharvestbox-desktop.gif"
+        srcset="./img/work-it/freshharvestbox-desktop.gif"
         width="860px"
       />
       <source
         media="(min-width: 768px)"
-        srcset="../img/work-it/freshharvestbox-tablet.gif"
+        srcset="./img/work-it/freshharvestbox-tablet.gif"
         width="704px"
       />
       <img
-        src="../img/work-it/freshharvestbox-mobile.gif"
+        src="./img/work-it/freshharvestbox-mobile.gif"
         style="width: auto"
         class="image-gif"
       />
